package org.example;

public enum FuelType {
    ELECTRIC,
    GAS,
    HYBRID
}
