package org.example;

public enum Status {
    NEED_REPAIR,
    IN_OPERATION,
    FOR_SCRAP
}
