package org.example;

public enum VehicleType {
    BUS,
    TROLLEYBUS,
    TRAM
}
